<?xml version="1.0"?>
<package>
  <name>robo_control</name>
  <version>1.0.0</version>
  <description>Wall follower Robot</description>

  <maintainer email="pedro_santos@outlook.pt">Pedro Santos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
